--- a/public/css/pdf_css.css
+++ b/public/css/pdf_css.css
@@ -1,6 +1,19 @@
+@page{
+    margin-right: 1.5cm;
+    margin-left: 1.5cm;
+    size:8.5in 11in
+}
+
 .page
 {
     /*background-image: url('images/cs_logo.png');*/
+    width: 100%;
+    height:100%;
+    position:absolute;
+    top:0px;
+    bottom:0px;
+    margin: auto;
+    margin-top: 0px !important;
 }
 
 .page-break
@@ -8,11 +21,23 @@
     page-break-after: always;
 }
 
+.vertical-center
+{
+    position: absolute;
+    top: 50%; 
+    transform: translate(0, -50%);
+}
 .intro-title-block
 {
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
+}
+
+.intro-title-block img
+{
+    min-height: 200px;
+    min-width: 200px;
+    max-height: 200px;
+    max-width: 200px;
 }
 
 .event-title-block .block-title
@@ -21,6 +46,40 @@
     text-align: center;
     font-size: 48px;
     font-weight: bold;
+}
+
+.event-prep-block
+{
+    font-size: 22px;
+    text-align: center;
+}
+
+.event-prep-block .prep-prepared
+{
+    margin-bottom: 20px;
+}
+
+.event-prep-block .prep-presented
+{
+    margin-bottom: 20px;
+}
+
+
+
+.event-prep-block .prep-org
+{
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.event-prep-block .prep-officer
+{
+    font-weight: bold;
+}
+
+.event-prep-block .prep-officer-title
+{
+    font-style: italic;
 }
 
 .event-desc-block .block-desc
@@ -45,27 +104,25 @@
     font-size: 24px;
     text-align: center;
 }
-.event-img-block .block-title
-{
-   font-weight: bold;
-}
 
-.event-img-block .info-block .block-title
+.event-img-block .info-block p
 {
-   font-weight: bold;
+   border: 3px solid black;
+   padding: 5px
 }
-
 
 .event-img-block .img-block
 {
     margin-left: auto;
     margin-right: auto;
+    max-width: 400px
 }
 
-.event-img-block .img-block .block-img
+.event-img-block .img-block img
 {
     min-width: 400px;
     max-width: 400px;
-    min-height: 300px;
-    max-height: 300px;
+    min-height: 250px;
+    max-height: 250px;
+    border: 3px solid black;
 }
