--- a/public/css/all.css
+++ b/public/css/all.css
@@ -7,3 +7,510 @@
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: #f9f2f2;
 }
+
+
+@import url('https://fonts.googleapis.com/css?family=Nova+Slim&display=swap');
+
+body, html {
+  line-height: 1.8;
+  font-family: 'Roboto', sans-serif;
+  color: #555e58;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+  font-weight: 400;
+  margin:0px;
+  padding:0px;
+}
+
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+  font-weight: 400;
+  line-height: 1.5em;
+}
+
+
+p {
+font-size: 15px;
+margin: 12px 0 0;
+line-height: 24px;
+}
+
+
+
+a{
+color: #333;
+font-weight: 400;
+}
+
+button:focus{
+box-shadow:none;
+outline:none;
+border:none;
+}
+
+button{
+cursor:pointer;
+}
+
+ul, ol {
+padding: 0;
+margin:0px;
+  list-style: none;
+}
+
+
+
+a,
+a:hover,
+a:focus {
+  color: #333;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+
+
+/*=======================================================
+material-icons start
+==================================================*/
+
+@font-face {
+font-family: 'Material Icons';
+font-style: normal;
+font-weight: 400;
+src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+src: local('Material Icons'),
+  local('MaterialIcons-Regular'),
+  url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+  url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+  url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+
+.material-icons {
+font-family: 'Material Icons';
+font-weight: normal;
+font-style: normal;
+font-size: 24px;  /* Preferred icon size */
+display: inline-block;
+line-height: 1;
+text-transform: none;
+letter-spacing: normal;
+word-wrap: normal;
+white-space: nowrap;
+direction: ltr;
+
+/* Support for all WebKit browsers. */
+-webkit-font-smoothing: antialiased;
+/* Support for Safari and Chrome. */
+text-rendering: optimizeLegibility;
+
+/* Support for Firefox. */
+-moz-osx-font-smoothing: grayscale;
+
+/* Support for IE. */
+font-feature-settings: 'liga';
+}
+
+/*=======================================================
+material-icons end
+==================================================*/
+
+
+
+.wrapper {
+position: relative;
+width:100%;
+overflow:auto;
+}
+
+
+/*=======================================================
+ main-content navbar-design start
+ ===============================================*/
+
+
+
+#content {
+position: relative;
+  transition: all 0.3s;
+background-color: #EEEEEE;
+}
+
+.top-navbar{
+width:100%;
+z-index:9;
+position:relative;
+}
+
+
+.main-content{
+padding:10px 20px 0px 20px;
+position: relative;
+  width: 100%;
+}
+
+
+
+.navbar{
+  background-color: #800000;
+  color: #FFFFFF;
+}
+
+.navbar-brand {
+  color: #FFFFFF;
+}
+
+.navbar button{
+background-color:transparent;
+border:none;
+}
+.navbar button span{
+color:#fff;
+}
+
+#sidebarCollapse{
+border-radius:50%;
+width:45px;
+height:45px;
+text-align:center;
+line-height:45px;
+margin-right:20px;
+border:none;
+  color: #FFFFFF;
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+#sidebarCollapse span {
+  margin-top: 3px;
+  padding: 0px;
+  font-size: 35px;
+}
+
+.navbar-brand h3{
+  color:rgb(255, 255, 255);
+  font-size:17px;
+  margin:0px;
+  text-transform:uppercase;
+  transition:all 0.5s ease;
+  font-weight:600;
+  font-size: 1.7rem;
+}
+
+.navbar-brand h3 img{
+width:45px;
+margin-right:10px;
+}
+.navbar-nav > li > a {
+  color: #FFFFFF;
+}
+
+.navbar .notification {
+position: absolute;
+  top: 5px;
+  right: 10px;
+display: block;
+  font-size: 9px;
+  border: 0px;
+  font-size: 10px;
+  background: #d9534f;
+  min-width: 15px;
+text-align: center;
+  padding: 1px 5px;
+  height: 15px;
+  border-radius: 2px;
+  line-height: 14px;
+}
+
+
+.navbar-nav > li.show .dropdown-menu {
+  transform: translate3d(0, 0, 0);
+opacity:1;
+visibility:visible;
+}
+
+
+.dropdown-menu li > a {
+  font-size: 13px;
+  padding: 10px 20px;
+  margin: 0 5px;
+  border-radius: 2px;
+font-weight: 400;
+  transition: all 150ms linear;
+}
+
+.navbar-nav > .active > a:focus {
+  color: #FFFFFF;
+  background-color: rgba(0, 0, 0, 0.08);
+}
+
+
+.navbar-nav li a {
+  position: relative;
+  display: block;
+  padding: 10px 15px!important;
+}
+
+/*=======================================================
+ main-content navbar-design end
+ ===============================================*/
+
+ 
+/*=======================================================
+ main-content inner design like card start
+ ===============================================*/
+
+
+.card {
+  margin: 10px 0;
+}
+
+.card {
+  border-radius: 0px!important;
+}
+
+.card {
+  display: inline-block;
+  position: relative;
+border:none!important;
+  width: 100%;
+  margin:15px 0;
+  box-shadow: 0 1px 2px rgb(0 0 0 / 8%);
+  border-radius: 6px;
+  color: rgba(0,0,0, 0.87);
+  background: #fff;
+}
+
+.card-stats .card-header {
+  float: left;
+  text-align: center;
+}
+
+/*
+.card .card-header {
+  padding: 15px 20px 0;
+  z-index: 3;
+background-color:#fff!important;
+border-bottom:none;
+}
+*/
+
+.card .card-footer .stats .material-icons {
+  position: relative;
+  top: 4px;
+  font-size: 16px;
+}
+
+.card-stats .card-header span {
+  font-size: 36px;
+  line-height: 56px;
+  width: 56px;
+  height: 56px;
+}
+
+.icon.icon-warning {
+  color: #ff9800;
+}
+
+.icon.icon-rose {
+  color: #e91e63;
+}
+.icon.icon-success {
+  color: #4caf50;
+}
+.icon.icon-info {
+  color: #00bcd4;
+}
+.card .card-footer {
+  margin: 0 7px 0px;
+  padding-top: 10px;
+background-color:#fff;
+  border-top: 1px solid #eeeeee;
+}
+
+.text-info {
+  color: #03A9F4!important;
+}
+
+.card-stats .card-content {
+  text-align: right;
+  padding-top: 10px;
+}
+
+.card .card-content {
+  padding: 15px 20px;
+  position: relative;
+}
+
+.card .card-content .category {
+  margin-bottom: 0;
+}
+.card .category:not([class*="text-"]) {
+  color: #555555;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.card .card-title:not(.card-calendar .card-title) {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.card-stats .card-title {
+  margin: 0;
+}
+
+.card .card-footer .stats {
+  line-height: 22px;
+  color: #555555;
+  font-size: 15px;
+}
+
+.card .card-footer div {
+  display: inline-block;
+}
+
+.card .card-header-text h4{
+  margin-top: 0;
+  margin-bottom: 3px;
+font-size:19px;
+  font-weight: 400;
+color: #222222;
+  text-decoration: none;
+
+}
+
+.table > thead > tr > th {
+  border-bottom-width: 1px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+
+.card .card-content {
+  padding: 15px 20px;
+  position: relative;
+}
+
+.streamline .sl-primary {
+  border-left-color: #188ae2;
+}
+
+.streamline .sl-item {
+  position: relative;
+  padding-bottom: 12px;
+  border-left: 1px solid #ccc;
+}
+
+
+
+.streamline .sl-item:before {
+  content: '';
+  position: absolute;
+  left: -6px;
+  top: 0;
+  background-color: #ccc;
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+}
+.streamline .sl-primary:before, .streamline .sl-primary:last-child:after {
+  background-color: #188ae2;
+}
+
+
+.streamline .sl-danger:before, .streamline .sl-danger:last-child:after {
+  background-color: #ff5b5b;
+}
+
+.streamline .sl-success {
+  border-left-color: #10c469;
+}
+
+.streamline .sl-success:before, .streamline .sl-success:last-child:after {
+  background-color: #10c469;
+}
+
+.streamline .sl-warning {
+  border-left-color: #f9c851;
+}
+
+.streamline .sl-warning:before, .streamline .sl-warning:last-child:after {
+  background-color: #f9c851;
+}
+
+
+
+.streamline .sl-danger {
+  border-left-color: #ff5b5b;
+}
+.streamline .sl-item .sl-content {
+  margin-left: 24px;
+}
+
+.streamline .sl-item .text-muted {
+  color: inherit;
+  opacity: .6;
+font-size:12px;
+}
+
+.streamline .sl-item p {
+font-size:14px;
+color:#333;
+}
+
+
+/*=======================================================
+ main-content inner design like card end
+ ===============================================*/
+
+
+
+/*=============================================
+footer design start
+=========================================*/
+
+.footer {
+  border-top: 1px solid #e7e7e7;
+}
+
+footer {
+  padding: 10px 0;
+position:relative;
+width:100%;
+}
+
+footer ul li {
+  display: inline-block;
+}
+
+footer ul li a {
+  color: inherit;
+  padding: 15px;
+  font-weight: 500;
+  font-size: 12px;
+  text-transform: uppercase;
+  border-radius: 3px;
+  text-decoration: none;
+  position: relative;
+  display: block;
+}
+
+
+footer .copyright {
+  padding: 15px;
+font-size:14px;
+  margin: 0;
+}
+
+
+/*=============================================
+footer design end
+=========================================*/
+
+
+
+
+
+
+
