--- a/public/css/all.css
+++ b/public/css/all.css
@@ -7,3 +7,12 @@
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: #f9f2f2;
 }
+
+.popover{
+    border: solid 1px #800000;
+}
+
+.popover-header {
+    background-color: #800000 !important;
+    color: white;
+}
