admin event view

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -17,6 +17,10 @@
     color: white;
 }
 
+.breadcrumb {
+    margin-bottom: 0;
+}
+
 
 @import url('https://fonts.googleapis.com/css?family=Nova+Slim&display=swap');
 
