--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -22,7 +22,7 @@
 #sidebar::-webkit-scrollbar{
 	width:5px;
 	border-radius:10px;
-	background-color:#eee;
+	background-color:rgb(197, 194, 194);
 	display:none;
 }
 #sidebar::-webkit-scrollbar-thumbs{
@@ -54,6 +54,17 @@
 	transition:all 0.5s ease;
 	font-weight:600;
     font-size: 1.7rem;
+}
+
+.sidebar-category h5{
+	color:#333;
+	margin:0px;
+	text-transform:uppercase;
+	transition:all 0.5s ease;
+	font-weight:600;
+    font-size: 1rem;
+	padding-left: 28px;
+	padding-top: 5px;
 }
 
 .sidebar-header h3 img{
@@ -97,6 +108,10 @@
 	position:relative;
     font-weight: 400;
     display: block;
+}
+
+#sidebar .dropdown .collapse.list-unstyled.menu li a {
+    padding-left: 30px;
 }
 
 #sidebar ul li a span{
@@ -154,6 +169,11 @@
    display:none;
    transition:all 0.5s ease;
 }
+
+#sidebar.active .sidebar-category {
+	display:none;
+	transition:all 0.5s ease;
+ }
 
 #sidebar.active ul li a span{
     display:none;
