--- a/public/css/pdf_css.css
+++ b/public/css/pdf_css.css
@@ -14,6 +14,11 @@
     bottom:0px;
     margin: auto;
     margin-top: 0px !important;
+    border:1px solid red;
+}
+
+.text-center{
+    text-align: center;
 }
 
 .page-break
@@ -23,10 +28,14 @@
 
 .vertical-center
 {
+    margin: 0;
     position: absolute;
-    top: 50%; 
-    transform: translate(0, -50%);
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
+
 .intro-title-block
 {
     text-align: center;
