--- a/public/css/pdf_css.css
+++ b/public/css/pdf_css.css
@@ -14,7 +14,6 @@
     bottom:0px;
     margin: auto;
     margin-top: 0px !important;
-    border:1px solid red;
 }
 
 .text-center{
@@ -143,6 +142,7 @@
     min-height: 480px;
     max-height: 480px;
     border: 1px solid black;
+    object-fit: cover;
 }
 
 .badge {
