--- a/public/css/pdf_css.css
+++ b/public/css/pdf_css.css
@@ -1,12 +1,5 @@
-@page{
-    margin-right: 1.5cm;
-    margin-left: 1.5cm;
-    size:8.5in 11in
-}
-
 .page
 {
-    /*background-image: url('images/cs_logo.png');*/
     width: 100%;
     height:100%;
     position:absolute;
@@ -125,10 +118,17 @@
 .event-img-block .info-block p
 {
    border: 1px solid black;
-   padding: 3px
+   padding: 3px;
 }
 
-.event-img-block .img-block
+div .img-block-poster
+{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 480px;
+}
+
+div .img-block-evidence
 {
     margin-left: auto;
     margin-right: auto;
@@ -137,22 +137,20 @@
 
 img .img-poster
 {
-    min-height: 672px;
-    max-height: 672px;
-    min-width: 480px;
+    min-height: auto;
+    min-width: auto;
+    max-height: 676px;
     max-width: 480px;
     border: 1px solid black;
-    object-fit: contain;
 }
 
 img .img-evidence
 {
-    min-width: 672px;
-    max-width: 672px;
-    min-height: 480px;
+    min-height: auto;
+    min-width: auto;
     max-height: 480px;
+    max-width: 676px;
     border: 1px solid black;
-    object-fit: contain;
 }
 
 .badge {
