--- a/public/css/aboutUsCSS.css
+++ b/public/css/aboutUsCSS.css
@@ -1,4 +1,4 @@
-/* Source:  https://codepen.io/littlesnippets/pen/NGdoKP;*/
+/* Source:  https://codepen.io/littlesnippets/pen/NGdoKP */
 
 /* Included color classes.. 
 	.red 
@@ -141,4 +141,97 @@ figure.snip1104.hover:before {
 .DavidsAndGoliath{
   
   font-family: 'Raleway', Arial, sans-serif;
+}
+
+
+
+
+
+
+
+
+/*Source:  https://codepen.io/colloque/pen/poOLPg */
+
+/*effect-underline*/
+h3.effect-underline:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 1em;
+  width: 100%;
+  border-bottom: 1px solid;
+  margin-top: 10px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(0,1);
+  transform: scale(0,1);
+}
+
+h3.effect-underline:hover:after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
+/*effect-box*/
+h3.effect-box:after,
+h3.effect-box:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 1em;
+  width: 100%;
+  margin-top: 10px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  
+}
+
+h3.effect-box:before {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  -webkit-transform: scale(1,0);
+  transform: scale(1,0);
+}
+
+h3.effect-box:after {
+  border-bottom: 1px solid;
+  border-top: 1px solid;
+  -webkit-transform: scale(0,1);
+  transform: scale(0,1);
+}
+
+h3.effect-box:hover:after,
+h3.effect-box:hover:before {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
+/* effect-shine */
+h3.effect-shine:hover {
+  -webkit-mask-image: linear-gradient(-105deg, rgba(0,0,0,.8) 30%, #000 70%, rgba(10,0,0,.6) 90%);
+  -webkit-mask-size: 200%;
+  animation: shine 1s infinite;
+}
+
+/* effect-shine */
+h2.effect-shine:hover {
+  -webkit-mask-image: linear-gradient(-105deg, rgba(0,0,0,.8) 30%, #000 70%, rgba(10,0,0,.6) 90%);
+  -webkit-mask-size: 200%;
+  animation: shine 1s infinite;
+}
+
+@-webkit-keyframes shine {
+  from {
+    -webkit-mask-position: 150%;
+  }
+  
+  to {
+    -webkit-mask-position: -50%;
+  }
 }
